--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Roboto+Slab:wght@300;500;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="utf-8">
-    <title>Starting Point</title>
+    <title>Gamelogged.com</title>
   </head>
   <body>
     <div id="root"></div>
